# lishuuro

./: .env_example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml  ubuntu_install.sh
src/: main.rs
src/database/: mod.rs  model.rs  redis.rs  serde_helpers.rs
src/database/clock/: mod.rs  queries.rs  time_control.rs
src/lichess/: login.rs  login_helpers.rs  mod.rs
src/routes/: mod.rs
src/websockets/: handler.rs  mod.rs
src/websockets/channels/: ai.rs  chat.rs  clock.rs  game.rs  game_reguests.rs  game_requests.rs  games.rs  jinja.rs  message_types.rs  mod.rs  player.rs  players.rs  tv.rs  watchers.rs
ui/: build.sh  pnpm-lock.yaml
